# docker-demo

./: .gitignore  .travis.yml  Dockerfile  README.md  advanced.sd.dc.yaml  default.conf  docker-compose.yaml  requirements.txt  runserver.py  setup.cfg  simple.conf  simple.sd.dc.yaml  tox.ini
ansible/: site.yaml
ansible/group_vars/: localhost
ansible/roles/deploy-demo/defaults/: main.yaml
ansible/roles/deploy-demo/tasks/: main.yaml
demo/: __init__.py
demo/app/: __init__.py
demo/routes/: __init__.py  v1.py
nginx/: Dockerfile  index.html
template/: demo.template
tests/: test_v1_routes.py
