[metadata]
name = docker-demo
author = Ben Riggleman
summary = A simple web API to show how docker works
home-page = https://github.com/briggleman/docker-demo
requires-python = >=3.5.0

[files]
packages =
    docker-demo

[extras]
dev =
    pylint==1.7.2
tox =
    tox>=2.8.2
pbr =
    pbr>=3.1.1
test =
    pytest-cov==2.5.1
    pytest==3.2.1
    pytest-watch==4.1.0
    pytest-env>=0.6.2
